--- a/config.json
+++ b/config.json
@@ -1,1 +1,25 @@
 
+{
+  "name": "My MQTT Client",
+  "version": "1.0.0",
+  "slug": "my_mqtt_client",
+  "description": "A C++ MQTT client that sends messages",
+  "arch": ["amd64", "armv7", "aarch64", "armhf"],
+  "startup": "application",
+  "boot": "auto",
+  "hassio_api": true,
+  "host_network": true,
+  "ports": {
+    "1883": "1883"
+  },
+  "options": {
+    "broker": "192.168.1.222",
+    "username": "user",
+    "password": "passwd"
+  },
+  "schema": {
+    "broker": "str",
+    "username": "str",
+    "password": "str"
+  }
+}
