--- a/config.json
+++ b/config.json
@@ -1,9 +1,8 @@
-
 {
-  "name": "My MQTT Client",
+  "name": "MQTT C++ Client",
   "version": "1.0.0",
-  "slug": "my_mqtt_client",
-  "description": "A C++ MQTT client that sends messages",
+  "slug": "mqtt_cpp_client",
+  "description": "A C++ MQTT client that sends test messages to a broker.",
   "arch": ["amd64", "armv7", "aarch64", "armhf"],
   "startup": "application",
   "boot": "auto",
@@ -12,6 +11,7 @@
   "ports": {
     "1883": "1883"
   },
+  "image": "sergheislobodeaniuc/my_mqtt_app:latest",
   "options": {
     "broker": "192.168.1.222",
     "username": "user",
