--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Name of repository
+name: Name TTT
 url: 'https://github.com/S-Slobodeaniuc/my_mqtt_addon'
-maintainer: Test maintainer
+maintainer: TestTeset
