--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,15 @@
-name: "Test"
-description: "tetetet!"
-version: "1.0"
-slug: "hello_wtttt"
-init: false
+name: "MQTT Client"
+version: "1.0.0"
+slug: "mqtt_client"
+description: "An MQTT client running in a pre-built Docker container."
 arch:
   - aarch64
   - amd64
   - armhf
   - armv7
   - i386
+startup: application
+host_network: true
+image: "sergheislobodeaniuc/my_mqtt_app:latest"
+ports:
+  - 1883:1883
