--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Name TTT
+name: Name TTfT
 url: 'https://github.com/S-Slobodeaniuc/my_mqtt_addon'
-maintainer: TestTeset
+maintainer: TestTesT
