--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "name": "My Custom C++ App",
-  "version": "1.0",
+  "version": "latest",
   "slug": "my_custom_cpp_app",
   "description": "This is a custom C++ app running in Docker",
   "startup": "application",
