--- a/config.json
+++ b/config.json
@@ -13,20 +13,20 @@
     "broker_ip": "default_value",
     "broker_port": 1883,
     "mqtt_user": "none",
-    "mqtt_pass": "none",
+    "mqtt_pass": "none"
   },
 
   "schema": {
     "broker_ip": "str",
     "broker_port": "int",
-    "mqtt_user": "str"
+    "mqtt_user": "str",
     "mqtt_pass": "str"
   },
 
   "environment": {
     "BROKER_IP": "${broker_ip}",
     "BROKER_PORT": "${broker_port}",
-    "USERNAME": "${mqtt_user}"
+    "USERNAME": "${mqtt_user}",
     "PASSWORD": "${mqtt_pass}"
   }
 }
