--- a/config.json
+++ b/config.json
@@ -24,9 +24,9 @@
   },
 
   "environment": {
-    "BROKER_IP": "${broker_ip}",
-    "BROKER_PORT": "${broker_port}",
-    "USERNAME": "${mqtt_user}",
-    "PASSWORD": "${mqtt_pass}"
+    "BROKER_IP": "${options.broker_ip}",
+    "BROKER_PORT": "${options.broker_port}",
+    "USERNAME": "${options.mqtt_user}",
+    "PASSWORD": "${options.mqtt_pass}"
   }
 }
