--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
   "startup": "application",
   "boot": "auto",
   "image": "sergheislobodeaniuc/my_mqtt_app",
+  "init":false,
   "arch": ["amd64"],
   "options": {
     "broker_ip": "default_value",
