--- a/config.json
+++ b/config.json
@@ -26,6 +26,8 @@
     "BROKER_IP": "${broker_ip}",
     "BROKER_PORT": "${broker_port}",
     "USERNAME": "${mqtt_user}",
-    "PASSWORD": "${mqtt_pass}"
+    "PASSWORD": "${mqtt_pass}",
+    "TEST_ENV": "test_valuie_ooo",
+    "test_env":"small_test_valu"
   }
 }
