--- a/config.json
+++ b/config.json
@@ -12,23 +12,20 @@
     "broker_ip": "default_value",
     "broker_port": 1883,
     "mqtt_user": "none",
-    "mqtt_pass": "none",
-    "test_env":"nnn1111"
+    "mqtt_pass": "none"
   },
 
   "schema": {
     "broker_ip": "str",
     "broker_port": "int",
     "mqtt_user": "str",
-    "mqtt_pass": "str",
-    "TEST_ENV":"str"
+    "mqtt_pass": "str"
   },
 
   "environment": {
     "BROKER_IP": "none",
     "BROKER_PORT": "none",
     "MQTT_USER": "none",
-    "MQTT_PASS": "none",
-    "TEST_ENV": "test_value1"
+    "MQTT_PASS": "none"
   }
 }
