--- a/config.json
+++ b/config.json
@@ -12,14 +12,20 @@
     "broker_ip": "default_value",
     "broker_port": 1883,
     "mqtt_user": "none",
-    "mqtt_pass": "none"
+    "mqtt_pass": "none",
+    "devices":{}
   },
 
   "schema": {
     "broker_ip": "str",
     "broker_port": "int",
     "mqtt_user": "str",
-    "mqtt_pass": "password"
+    "mqtt_pass": "password",
+    "devices": {
+      "": {
+        "id": "int(1,100)",
+        "ip": "match(^\\d{1,3}(\\.\\d{1,3}){3}$)"
+      }
   },
 
   "environment": {
