--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
     "broker_port": 1883,
     "mqtt_user": "none",
     "mqtt_pass": "none",
-    "devices":{}
+    "devices":[]
   },
 
   "schema": {
@@ -21,12 +21,13 @@
     "broker_port": "int",
     "mqtt_user": "str",
     "mqtt_pass": "password",
-    "devices": {
-      "": {
+    "devices": [
+      {
+        "name": "str",
         "id": "int(1,100)",
         "ip": "match(^\\d{1,3}(\\.\\d{1,3}){3}$)"
       }
-    }
+    ]
   },
 
   "environment": {
