--- a/config.json
+++ b/config.json
@@ -13,7 +13,13 @@
     "broker_port": 1883,
     "mqtt_user": "none",
     "mqtt_pass": "none",
-    "devices":[]
+    "devices": [
+      {
+        "name": "KARTE",
+        "id": 1,
+        "ip": "192.168.1.115"
+      }
+    ]
   },
 
   "schema": {
